tests/baselines/reference/contextualThisTypeInJavascript(strict=true).errors.txt
context.js(7,14): error TS2339: Property 'unknown' does not exist on type '{ prop: number; method(): void; }'.


==== context.js (1 errors) ====
    const obj = {
        prop: 2,
        method() {
            this;
            this.prop;
            this.method;
            this.unknown; // ok, obj has a string indexer
                 ~~~~~~~
!!! error TS2339: Property 'unknown' does not exist on type '{ prop: number; method(): void; }'.
        }
    }
    